# travel-agent

./: Dockerfile  Dockerfile.worker  README.md  deploy-lambda.sh  deploy.sh  lambda_function.py  pyproject.toml  setup_lambda.sh
frontend/: deploy.sh  index.html
frontend/src/: App.vue
travel_agent/: lambda_handler.py  run.py  tasks.py
travel_agent/api/: main.py
travel_agent/api/routes/: chat.py
travel_agent/core/agents/: base.py  calendar_agent.py  mail_agent.py  orchestrator.py  planner_agent.py  recommendation_agent.py  search_agent.py
travel_agent/core/config/: settings.py
travel_agent/core/llm/: factory.py
travel_agent/core/templates/: email_template.html
travel_agent/tests/: test_mail_agent.py  test_orchestrator.py  test_search_agent.py
travel_agent/utils/: __init__.py  cache_client.py
