[tool.poetry]
name = "travel-agent"
version = "0.1.0"
description = "A multi-agent system for travel planning"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "travel_agent"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
python-dotenv = "^1.0.1"
langchain = "^0.1.20"
langchain-community = "^0.0.38"
langchain-openai = "^0.0.8"
langchain-anthropic = "^0.0.1"
langgraph = "^0.0.20"
streamlit = "^1.31.1"
pydantic = "^2.6.1"
python-multipart = "^0.0.9"
httpx = "^0.26.0"
pydantic-settings = "^2.9.1"
aiohttp = "^3.11.18"
celery = {extras = ["sqlalchemy"], version = "^5.5.2"}
sqlalchemy = "^2.0.41"
boto3 = "^1.38.22"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
ruff = "^0.2.1"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py312" 